--- a/heart_signal_classification.ipynb
+++ b/heart_signal_classification.ipynb
@@ -1072,119 +1072,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 1/10\n",
-      "24/24 [==============================] - 1s 7ms/step - loss: 7.7841 - accuracy: 0.5040 - val_loss: 1.1744 - val_accuracy: 0.6878\n",
-      "Epoch 2/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 4.8735 - accuracy: 0.5120 - val_loss: 1.3782 - val_accuracy: 0.6667\n",
-      "Epoch 3/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 3.7516 - accuracy: 0.5771 - val_loss: 1.1634 - val_accuracy: 0.7143\n",
-      "Epoch 4/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 3.0379 - accuracy: 0.6117 - val_loss: 1.2400 - val_accuracy: 0.6720\n",
-      "Epoch 5/10\n",
-      "24/24 [==============================] - 0s 4ms/step - loss: 3.0768 - accuracy: 0.5918 - val_loss: 1.1255 - val_accuracy: 0.7037\n",
-      "Epoch 6/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 2.6579 - accuracy: 0.6130 - val_loss: 1.0403 - val_accuracy: 0.7143\n",
-      "Epoch 7/10\n",
-      "24/24 [==============================] - 0s 4ms/step - loss: 1.7231 - accuracy: 0.6263 - val_loss: 0.9050 - val_accuracy: 0.7037\n",
-      "Epoch 8/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.9757 - accuracy: 0.6582 - val_loss: 0.7711 - val_accuracy: 0.7302\n",
-      "Epoch 9/10\n",
-      "24/24 [==============================] - 0s 4ms/step - loss: 1.5566 - accuracy: 0.6556 - val_loss: 0.8123 - val_accuracy: 0.7566\n",
-      "Epoch 10/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.2849 - accuracy: 0.6569 - val_loss: 0.8171 - val_accuracy: 0.7196\n",
-      "6/6 [==============================] - 0s 1ms/step - loss: 0.8171 - accuracy: 0.7196\n",
-      "Epoch 1/10\n",
-      "24/24 [==============================] - 1s 7ms/step - loss: 6.4706 - accuracy: 0.5066 - val_loss: 1.4379 - val_accuracy: 0.6455\n",
-      "Epoch 2/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 4.7106 - accuracy: 0.5572 - val_loss: 1.4581 - val_accuracy: 0.6667\n",
-      "Epoch 3/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 2.9988 - accuracy: 0.6011 - val_loss: 0.9052 - val_accuracy: 0.7037\n",
-      "Epoch 4/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 2.6137 - accuracy: 0.5944 - val_loss: 0.9249 - val_accuracy: 0.7249\n",
-      "Epoch 5/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.7007 - accuracy: 0.6316 - val_loss: 0.5417 - val_accuracy: 0.7354\n",
-      "Epoch 6/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.7770 - accuracy: 0.6277 - val_loss: 0.5959 - val_accuracy: 0.7619\n",
-      "Epoch 7/10\n",
-      "24/24 [==============================] - 0s 4ms/step - loss: 1.7610 - accuracy: 0.6476 - val_loss: 0.7180 - val_accuracy: 0.7196\n",
-      "Epoch 8/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.1321 - accuracy: 0.6769 - val_loss: 0.5158 - val_accuracy: 0.7513\n",
-      "Epoch 9/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 0.9288 - accuracy: 0.6862 - val_loss: 0.5429 - val_accuracy: 0.7302\n",
-      "Epoch 10/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 0.9528 - accuracy: 0.6822 - val_loss: 0.5482 - val_accuracy: 0.7513\n",
-      "6/6 [==============================] - 0s 1ms/step - loss: 0.5482 - accuracy: 0.7513\n",
-      "Epoch 1/10\n",
-      "24/24 [==============================] - 1s 7ms/step - loss: 6.7808 - accuracy: 0.5359 - val_loss: 1.4888 - val_accuracy: 0.5661\n",
-      "Epoch 2/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 5.1188 - accuracy: 0.5532 - val_loss: 1.0975 - val_accuracy: 0.7037\n",
-      "Epoch 3/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 3.9268 - accuracy: 0.5572 - val_loss: 0.9691 - val_accuracy: 0.6772\n",
-      "Epoch 4/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 2.6185 - accuracy: 0.5957 - val_loss: 0.8215 - val_accuracy: 0.6984\n",
-      "Epoch 5/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 2.4915 - accuracy: 0.6037 - val_loss: 0.7050 - val_accuracy: 0.6984\n",
-      "Epoch 6/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.6527 - accuracy: 0.6263 - val_loss: 0.7220 - val_accuracy: 0.7143\n",
-      "Epoch 7/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.2369 - accuracy: 0.6835 - val_loss: 0.6958 - val_accuracy: 0.7037\n",
-      "Epoch 8/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.3705 - accuracy: 0.6742 - val_loss: 0.6601 - val_accuracy: 0.7619\n",
-      "Epoch 9/10\n",
-      "24/24 [==============================] - 0s 4ms/step - loss: 1.2116 - accuracy: 0.6596 - val_loss: 0.5937 - val_accuracy: 0.7249\n",
-      "Epoch 10/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 0.8750 - accuracy: 0.7008 - val_loss: 0.6581 - val_accuracy: 0.7989\n",
-      "6/6 [==============================] - 0s 5ms/step - loss: 0.6581 - accuracy: 0.7989\n",
-      "Epoch 1/10\n",
-      "24/24 [==============================] - 1s 7ms/step - loss: 9.3470 - accuracy: 0.4907 - val_loss: 2.6624 - val_accuracy: 0.5979\n",
-      "Epoch 2/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 7.0491 - accuracy: 0.5359 - val_loss: 1.4001 - val_accuracy: 0.7143\n",
-      "Epoch 3/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 5.1869 - accuracy: 0.5452 - val_loss: 1.3429 - val_accuracy: 0.6878\n",
-      "Epoch 4/10\n",
-      "24/24 [==============================] - 0s 4ms/step - loss: 3.8484 - accuracy: 0.5492 - val_loss: 0.7559 - val_accuracy: 0.7460\n",
-      "Epoch 5/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 3.5952 - accuracy: 0.5971 - val_loss: 0.8719 - val_accuracy: 0.7354\n",
-      "Epoch 6/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 3.4528 - accuracy: 0.5904 - val_loss: 0.8900 - val_accuracy: 0.7354\n",
-      "Epoch 7/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.8361 - accuracy: 0.6582 - val_loss: 0.8293 - val_accuracy: 0.7407\n",
-      "Epoch 8/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.5382 - accuracy: 0.6609 - val_loss: 0.6518 - val_accuracy: 0.7354\n",
-      "Epoch 9/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.5024 - accuracy: 0.6862 - val_loss: 0.6495 - val_accuracy: 0.7090\n",
-      "Epoch 10/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.4181 - accuracy: 0.6782 - val_loss: 0.6219 - val_accuracy: 0.7619\n",
-      "6/6 [==============================] - 0s 1ms/step - loss: 0.6219 - accuracy: 0.7619\n",
-      "Epoch 1/10\n",
-      "24/24 [==============================] - 1s 7ms/step - loss: 9.0415 - accuracy: 0.5027 - val_loss: 1.7339 - val_accuracy: 0.6243\n",
-      "Epoch 2/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 6.9846 - accuracy: 0.5452 - val_loss: 1.2451 - val_accuracy: 0.6984\n",
-      "Epoch 3/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 5.5870 - accuracy: 0.5598 - val_loss: 1.1355 - val_accuracy: 0.6931\n",
-      "Epoch 4/10\n",
-      "24/24 [==============================] - 0s 4ms/step - loss: 3.4616 - accuracy: 0.5691 - val_loss: 1.3918 - val_accuracy: 0.6720\n",
-      "Epoch 5/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 2.5866 - accuracy: 0.6396 - val_loss: 0.8206 - val_accuracy: 0.7566\n",
-      "Epoch 6/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 2.3659 - accuracy: 0.6210 - val_loss: 0.7042 - val_accuracy: 0.7302\n",
-      "Epoch 7/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.8407 - accuracy: 0.6330 - val_loss: 0.6600 - val_accuracy: 0.7249\n",
-      "Epoch 8/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.2485 - accuracy: 0.6729 - val_loss: 0.6251 - val_accuracy: 0.7884\n",
-      "Epoch 9/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.1286 - accuracy: 0.6809 - val_loss: 0.5614 - val_accuracy: 0.7354\n",
-      "Epoch 10/10\n",
-      "24/24 [==============================] - 0s 3ms/step - loss: 1.1235 - accuracy: 0.7008 - val_loss: 0.5444 - val_accuracy: 0.7143\n",
-      "6/6 [==============================] - 0s 1ms/step - loss: 0.5444 - accuracy: 0.7143\n",
-      "CNN Accuracy: 74.92%\n"
+      "6/6 [==============================] - 0s 1ms/step - loss: 0.5898 - accuracy: 0.7672\n",
+      "6/6 [==============================] - 0s 2ms/step - loss: 0.5566 - accuracy: 0.7725\n",
+      "6/6 [==============================] - 0s 1ms/step - loss: 0.7704 - accuracy: 0.7513\n",
+      "6/6 [==============================] - 0s 1ms/step - loss: 0.5814 - accuracy: 0.7143\n",
+      "6/6 [==============================] - 0s 2ms/step - loss: 0.5399 - accuracy: 0.7619\n",
+      "CNN Accuracy: 75.34%\n"
      ]
     }
    ],
@@ -1207,7 +1107,7 @@
     "    model.add(Dense(1, activation='sigmoid'))\n",
     "\n",
     "    model.compile(optimizer=Adam(learning_rate=0.0001), loss='binary_crossentropy', metrics=['accuracy'])\n",
-    "    model.fit(X_train, y_train_normal, epochs=10, validation_data=(X_test, y_test_normal))\n",
+    "    model.fit(X_train, y_train_normal, epochs=10, validation_data=(X_test, y_test_normal), verbose=0)\n",
     "\n",
     "    score = model.evaluate(X_test, y_test_normal    )\n",
     "    scores.append(score)\n",
@@ -1255,40 +1155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Trial 8 Complete [00h 00m 02s]\n",
-      "val_accuracy: 0.7989417910575867\n",
-      "\n",
-      "Best val_accuracy So Far: 0.820105791091919\n",
-      "Total elapsed time: 00h 01m 02s\n",
-      "Epoch 1/10\n",
-      "24/24 [==============================] - 1s 37ms/step - loss: 0.5382 - accuracy: 0.7221 - val_loss: 0.4960 - val_accuracy: 0.7619\n",
-      "Epoch 2/10\n",
-      "24/24 [==============================] - 1s 34ms/step - loss: 0.5777 - accuracy: 0.7008 - val_loss: 0.5055 - val_accuracy: 0.7672\n",
-      "Epoch 3/10\n",
-      "24/24 [==============================] - 1s 35ms/step - loss: 0.5613 - accuracy: 0.6915 - val_loss: 0.5005 - val_accuracy: 0.7725\n",
-      "Epoch 4/10\n",
-      "24/24 [==============================] - 1s 34ms/step - loss: 0.5169 - accuracy: 0.7473 - val_loss: 0.4768 - val_accuracy: 0.7725\n",
-      "Epoch 5/10\n",
-      "24/24 [==============================] - 1s 34ms/step - loss: 0.5335 - accuracy: 0.7194 - val_loss: 0.4649 - val_accuracy: 0.7354\n",
-      "Epoch 6/10\n",
-      "24/24 [==============================] - 1s 34ms/step - loss: 0.5150 - accuracy: 0.7194 - val_loss: 0.4658 - val_accuracy: 0.7884\n",
-      "Epoch 7/10\n",
-      "24/24 [==============================] - 1s 34ms/step - loss: 0.5208 - accuracy: 0.7154 - val_loss: 0.4627 - val_accuracy: 0.7354\n",
-      "Epoch 8/10\n",
-      "24/24 [==============================] - 1s 34ms/step - loss: 0.5180 - accuracy: 0.7088 - val_loss: 0.4871 - val_accuracy: 0.7619\n",
-      "Epoch 9/10\n",
-      "24/24 [==============================] - 1s 34ms/step - loss: 0.5210 - accuracy: 0.7234 - val_loss: 0.4411 - val_accuracy: 0.7354\n",
-      "Epoch 10/10\n",
-      "24/24 [==============================] - 1s 34ms/step - loss: 0.5196 - accuracy: 0.7207 - val_loss: 0.4649 - val_accuracy: 0.7460\n",
-      "6/6 [==============================] - 0s 3ms/step - loss: 0.4649 - accuracy: 0.7460\n",
-      "CNN Hyperparameter Tuning Accuracy: 74.60%\n"
+      "Reloading Tuner from output/heartbeats/tuner0.json\n",
+      "6/6 [==============================] - 0s 4ms/step - loss: 0.4700 - accuracy: 0.7937\n",
+      "CNN Hyperparameter Tuning Accuracy: 79.37%\n"
      ]
     }
    ],
@@ -1325,11 +1201,11 @@
     "    project_name='heartbeats'\n",
     ")\n",
     "\n",
-    "tuner.search(X_train, y_train_normal, epochs=10, validation_data=(X_test, y_test_normal))\n",
+    "tuner.search(X_train, y_train_normal, epochs=10, validation_data=(X_test, y_test_normal), verbose=0)\n",
     "\n",
     "best_model = tuner.get_best_models(num_models=1)[0]\n",
     "\n",
-    "hist = best_model.fit(X_train, y_train_normal, epochs=10, validation_data=(X_test, y_test_normal))\n",
+    "hist = best_model.fit(X_train, y_train_normal, epochs=10, validation_data=(X_test, y_test_normal), verbose=0)\n",
     "\n",
     "score = best_model.evaluate(X_test, y_test_normal)\n",
     "\n",
