--- a/heart_signal_classification.ipynb
+++ b/heart_signal_classification.ipynb
@@ -1357,6 +1357,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/shurtu-gal/Stuff/Course/env/lib/python3.11/site-packages/keras/src/engine/training.py:3103: UserWarning: You are saving your model as an HDF5 file via `model.save()`. This file format is considered legacy. We recommend using instead the native Keras format, e.g. `model.save('my_model.keras')`.\n",
+      "  saving_api.save_model(\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the model as a .h5 file\n",
+    "\n",
+    "best_model.save('./output/model/heartbeat_classifier.h5')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![image.png](./images/cnn.png)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
